--- a/src/app/blog-list/blog-list.component.html
+++ b/src/app/blog-list/blog-list.component.html
@@ -18,8 +18,8 @@
                         <img src="../../assets/image/blogs/blog-one.webp" alt="blog">
                     </div>
                     <div class="blog-title-text">
-                        <h3>January 20, 2021</h3>
-                        <p>We provide creative and innovative Digital services</p>
+                        <h3>January 02, 2024</h3>
+                        <p>5 Tips for Optimizing Your Shopify Store's SEO</p>
                     </div>
                 </a>
                 <a routerLink="/resource-3" class="blog_card_wrap">
@@ -27,8 +27,8 @@
                         <img src="../../assets/image/blogs/blog-two.webp" alt="blog">
                     </div>
                     <div class="blog-title-text">
-                        <h3>January 20, 2021</h3>
-                        <p>We provide creative and innovative Digital services</p>
+                        <h3>January 21, 2024</h3>
+                        <p>How to Use Instagram to Drive Sales on Your Shopify Store</p>
                     </div>
                 </a>
                 <a routerLink="/resource-2" class="blog_card_wrap">
@@ -36,8 +36,8 @@
                         <img src="../../assets/image/blogs/blog-three.webp" alt="blog">
                     </div>
                     <div class="blog-title-text">
-                        <h3>January 20, 2021</h3>
-                        <p>We provide creative and innovative Digital services</p>
+                        <h3>February 06, 2024</h3>
+                        <p>5 Best Shopify Apps for Streamlining Your Business Operations</p>
                     </div>
                 </a>
                 <a routerLink="/resource-4" class="blog_card_wrap">
@@ -45,8 +45,8 @@
                         <img src="../../assets/image/blogs/blog-four.webp" alt="blog">
                     </div>
                     <div class="blog-title-text">
-                        <h3>January 20, 2021</h3>
-                        <p>We provide creative and innovative Digital services</p>
+                        <h3>February 27, 2024</h3>
+                        <p>The Benefits of Integrating Email Marketing into Your Shopify Store</p>
                     </div>
                 </a>
                 <a routerLink="/resource-5" class="blog_card_wrap">
@@ -54,44 +54,44 @@
                         <img src="../../assets/image/blogs/blog-five.webp" alt="blog">
                     </div>
                     <div class="blog-title-text">
-                        <h3>January 20, 2021</h3>
-                        <p>We provide creative and innovative Digital services</p>
+                        <h3>March 11, 2024</h3>
+                        <p>How to Build a Winning Shopify Store Design</p>
                     </div>
                 </a>
-                <a href="javascript:void(0)" class="blog_card_wrap">
+                <a routerLink="/resource-6" class="blog_card_wrap">
                     <div class="blog-img">
                         <img src="../../assets/image/blogs/blog-six.webp" alt="blog">
                     </div>
                     <div class="blog-title-text">
-                        <h3>January 20, 2021</h3>
-                        <p>We provide creative and innovative Digital services</p>
+                        <h3>March 30, 2024</h3>
+                        <p>use & benifit Language Translator - LangShop App</p>
                     </div>
                 </a>
-                <a href="javascript:void(0)" class="blog_card_wrap">
+                <a routerLink="/resource-7" class="blog_card_wrap">
                     <div class="blog-img">
                         <img src="../../assets/image/blogs/blog-seven.webp" alt="blog">
                     </div>
                     <div class="blog-title-text">
-                        <h3>January 20, 2021</h3>
-                        <p>We provide creative and innovative Digital services</p>
+                        <h3>April 13, 2024</h3>
+                        <p>use & benifit SEO HTML and XML Sitemap</p>
                     </div>
                 </a>
-                <a href="javascript:void(0)" class="blog_card_wrap">
+                <a routerLink="/resource-8" class="blog_card_wrap">
                     <div class="blog-img">
                         <img src="../../assets/image/blogs/blog-eight.webp" alt="blog">
                     </div>
                     <div class="blog-title-text">
-                        <h3>January 20, 2021</h3>
-                        <p>We provide creative and innovative Digital services</p>
+                        <h3>April 28, 2024</h3>
+                        <p>use & benifit Pickup Delivery Date - Pickeasy App</p>
                     </div>
                 </a>
-                <a href="javascript:void(0)" class="blog_card_wrap">
+                <a routerLink="/resource-9" class="blog_card_wrap">
                     <div class="blog-img">
                         <img src="../../assets/image/blogs/blog-nine.webp" alt="blog">
                     </div>
                     <div class="blog-title-text">
-                        <h3>January 20, 2021</h3>
-                        <p>We provide creative and innovative Digital services</p>
+                        <h3>May 05, 2024</h3>
+                        <p>use & benifit Abra Auto Applied Discounts</p>
                     </div>
                 </a>
                 <a routerLink="/resource" class="blog_card_wrap">
@@ -139,7 +139,7 @@
                         <p>We provide creative and innovative Digital services</p>
                     </div>
                 </a>
-                <a href="javascript:void(0)" class="blog_card_wrap">
+                <!-- <a routerLink="/resource-6" class="blog_card_wrap">
                     <div class="blog-img">
                         <img src="../../assets/image/blogs/blog-six.webp" alt="blog">
                     </div>
@@ -148,7 +148,7 @@
                         <p>We provide creative and innovative Digital services</p>
                     </div>
                 </a>
-                <a href="javascript:void(0)" class="blog_card_wrap">
+                <a routerLink="/resource-7" class="blog_card_wrap">
                     <div class="blog-img">
                         <img src="../../assets/image/blogs/blog-seven.webp" alt="blog">
                     </div>
@@ -157,7 +157,7 @@
                         <p>We provide creative and innovative Digital services</p>
                     </div>
                 </a>
-                <a href="javascript:void(0)" class="blog_card_wrap">
+                <a routerLink="/resource-8" class="blog_card_wrap">
                     <div class="blog-img">
                         <img src="../../assets/image/blogs/blog-eight.webp" alt="blog">
                     </div>
@@ -166,7 +166,7 @@
                         <p>We provide creative and innovative Digital services</p>
                     </div>
                 </a>
-                <a href="javascript:void(0)" class="blog_card_wrap">
+                <a routerLink="/resource-9" class="blog_card_wrap">
                     <div class="blog-img">
                         <img src="../../assets/image/blogs/blog-nine.webp" alt="blog">
                     </div>
@@ -174,7 +174,7 @@
                         <h3>January 20, 2021</h3>
                         <p>We provide creative and innovative Digital services</p>
                     </div>
-                </a>
+                </a> -->
                 <div class="cdk-button-wrap margin-auto"  id="loadMore">
                     <a class="cdk-btn-green" href="javascript:void(0)">Load more</a>
                 </div>
