--- a/src/app/resource-10/resource-10.component.html
+++ b/src/app/resource-10/resource-10.component.html
@@ -141,31 +141,31 @@
                 </div>
             </div>
             <div class="blog_cards_wrapper flex" id="blogFilter">
-                <a routerLinkActive="active" routerLink="/resource" class="blog_card_wrap">
+                <a routerLink="/resource" class="blog_card_wrap">
                     <div class="blog-img">
                         <img src="../../assets/image/blogs/blog-one.webp" alt="blog">
                     </div>
                     <div class="blog-title-text">
-                        <h3>January 20, 2021</h3>
-                        <p>We provide creative and innovative Digital services</p>
+                        <h3>January 02, 2024</h3>
+                        <p>5 Tips for Optimizing Your Shopify Store's SEO</p>
                     </div>
                 </a>
-                <a routerLinkActive="active" routerLink="/resource-3" class="blog_card_wrap">
+                <a routerLink="/resource-3" class="blog_card_wrap">
                     <div class="blog-img">
                         <img src="../../assets/image/blogs/blog-two.webp" alt="blog">
                     </div>
                     <div class="blog-title-text">
-                        <h3>January 20, 2021</h3>
-                        <p>We provide creative and innovative Digital services</p>
+                        <h3>January 21, 2024</h3>
+                        <p>How to Use Instagram to Drive Sales on Your Shopify Store</p>
                     </div>
                 </a>
-                <a routerLinkActive="active" routerLink="/resource-2" class="blog_card_wrap">
+                <a routerLink="/resource-2" class="blog_card_wrap">
                     <div class="blog-img">
                         <img src="../../assets/image/blogs/blog-three.webp" alt="blog">
                     </div>
                     <div class="blog-title-text">
-                        <h3>January 20, 2021</h3>
-                        <p>We provide creative and innovative Digital services</p>
+                        <h3>February 06, 2024</h3>
+                        <p>5 Best Shopify Apps for Streamlining Your Business Operations</p>
                     </div>
                 </a>
             </div>
