--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -360,8 +360,8 @@
                         <img src="../../assets/image/blogs/blog-one.webp" alt="blog">
                     </div>
                     <div class="blog-title-text">
-                        <h3>January 20, 2021</h3>
-                        <p>We provide creative and innovative Digital services</p>
+                        <h3>January 02, 2024</h3>
+                        <p>5 Tips for Optimizing Your Shopify Store's SEO</p>
                     </div>
                 </a>
                 <a routerLink="/resource-3" class="blog_card_wrap">
@@ -369,8 +369,8 @@
                         <img src="../../assets/image/blogs/blog-two.webp" alt="blog">
                     </div>
                     <div class="blog-title-text">
-                        <h3>January 20, 2021</h3>
-                        <p>We provide creative and innovative Digital services</p>
+                        <h3>January 21, 2024</h3>
+                        <p>How to Use Instagram to Drive Sales on Your Shopify Store</p>
                     </div>
                 </a>
                 <a routerLink="/resource-2" class="blog_card_wrap">
@@ -378,8 +378,8 @@
                         <img src="../../assets/image/blogs/blog-three.webp" alt="blog">
                     </div>
                     <div class="blog-title-text">
-                        <h3>January 20, 2021</h3>
-                        <p>We provide creative and innovative Digital services</p>
+                        <h3>February 06, 2024</h3>
+                        <p>5 Best Shopify Apps for Streamlining Your Business Operations</p>
                     </div>
                 </a>
             </div>
