--- a/src/app/paris-select/paris-select.component.html
+++ b/src/app/paris-select/paris-select.component.html
@@ -1,8 +1,8 @@
 <section id="main-banner" class="space-top-m">
-    <img src="../../assets/image/portfolio/paris/main-banner.webp" alt="" width="100%" class="main-banner-image desktop">
-    <img src="../../assets/image/portfolio/paris/main-banner-mobile.webp" alt="" width="100%" class="main-banner-image mobile">
+    <img src="../../assets/image/portfolio/paris/main-banner.webp" alt="" width="100%" class="main-banner-image">
+    <a class="arrow-down-scroll" (click)="scroll(target)"><svg xmlns="http://www.w3.org/2000/svg" height="50" width="50" viewBox="0 0 448 512"><path fill="#32c8ae" d="M201.4 342.6c12.5 12.5 32.8 12.5 45.3 0l160-160c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 274.7 86.6 137.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160z"/></svg></a>
 </section>
-<section id="title-and-text" class="service_section">
+<section id="title-and-text" class="service_section" #target>
     <div class="service_all_wrap container-second">
         <div class="title-wrap">
             <h1 class="portfolio-title-green">
