--- a/src/app/resource-5/resource-5.component.html
+++ b/src/app/resource-5/resource-5.component.html
@@ -6,7 +6,7 @@
             </h1>
             <div class="date-and-link-wrap flex-end">
                 <div class="date-wrap">
-                    <h3 class="green-text">January 20, 2021</h3>
+                    <h3 class="green-text">March 11, 2024</h3>
                 </div>
                 <div class="link-wrap">
                     <a class="cdk-btn-white"><span><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
@@ -85,31 +85,31 @@
                 </div>
             </div>
             <div class="blog_cards_wrapper flex" id="blogFilter">
-                <a routerLinkActive="active" routerLink="/resource" class="blog_card_wrap">
+                <a routerLink="/resource" class="blog_card_wrap">
                     <div class="blog-img">
                         <img src="../../assets/image/blogs/blog-one.webp" alt="blog">
                     </div>
                     <div class="blog-title-text">
-                        <h3>January 20, 2021</h3>
-                        <p>We provide creative and innovative Digital services</p>
+                        <h3>January 02, 2024</h3>
+                        <p>5 Tips for Optimizing Your Shopify Store's SEO</p>
                     </div>
                 </a>
-                <a routerLinkActive="active" routerLink="/resource-3" class="blog_card_wrap">
+                <a routerLink="/resource-3" class="blog_card_wrap">
                     <div class="blog-img">
                         <img src="../../assets/image/blogs/blog-two.webp" alt="blog">
                     </div>
                     <div class="blog-title-text">
-                        <h3>January 20, 2021</h3>
-                        <p>We provide creative and innovative Digital services</p>
+                        <h3>January 21, 2024</h3>
+                        <p>How to Use Instagram to Drive Sales on Your Shopify Store</p>
                     </div>
                 </a>
-                <a routerLinkActive="active" routerLink="/resource-2" class="blog_card_wrap">
+                <a routerLink="/resource-2" class="blog_card_wrap">
                     <div class="blog-img">
                         <img src="../../assets/image/blogs/blog-three.webp" alt="blog">
                     </div>
                     <div class="blog-title-text">
-                        <h3>January 20, 2021</h3>
-                        <p>We provide creative and innovative Digital services</p>
+                        <h3>February 06, 2024</h3>
+                        <p>5 Best Shopify Apps for Streamlining Your Business Operations</p>
                     </div>
                 </a>
             </div>
