--- a/src/app/gripps/gripps.component.html
+++ b/src/app/gripps/gripps.component.html
@@ -1,6 +1,17 @@
 <section id="main-banner" class="space-top-m">
     <img src="../../assets/image/portfolio/grips/main-banner.webp" alt="" width="100%" class="main-banner-image">
-    <a class="arrow-down-scroll" (click)="scroll(target)"><svg xmlns="http://www.w3.org/2000/svg" height="50" width="50" viewBox="0 0 448 512"><path fill="#32c8ae" d="M201.4 342.6c12.5 12.5 32.8 12.5 45.3 0l160-160c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 274.7 86.6 137.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160z"/></svg></a>
+    <a class="arrow-down-scroll" (click)="scroll(target)">
+        <div class="mouse_scroll">
+            <div class="mouse">
+                <div class="wheel"></div>
+            </div>
+            <div>
+                <span class="m_scroll_arrows unu"></span>
+                <span class="m_scroll_arrows doi"></span>
+                <span class="m_scroll_arrows trei"></span>
+            </div>
+        </div>
+    </a>
 </section>
 <section id="title-and-text" class="service_section" #target>
     <div class="service_all_wrap container-second">
