--- a/src/app/our-work/our-work.component.html
+++ b/src/app/our-work/our-work.component.html
@@ -106,7 +106,7 @@
                             <!-- <h3 class="logo_card">Menshealthclinic</h3> -->
                             <div class="bottom_card">
                             <h4 class="card-heading">Men's health clinic</h4>
-                            <p class="card-txt">Shopify Plus Design & Build</p>
+                            <p class="card-txt">Design & Build in Wordpress</p>
                             </div>
                         </div>
                         <img class="desktop" src="../../assets/image/portfolio/our_work_6.webp" alt="">
@@ -114,7 +114,7 @@
                     </a>
                     <div class="our_card_bottom_text mobile">
                         <h4 class="card-heading">Men's health clinic</h4>
-                        <p class="card-txt">Shopify Plus Design & Build</p>
+                        <p class="card-txt">Design & Build in Wordpress</p>
                     </div>
                 </div>
                 <div class="our_work-images_wrap flex wrap second">
