--- a/src/styles.css
+++ b/src/styles.css
@@ -2254,17 +2254,154 @@ html {
     display: block;
     position: absolute;
     left: 50%;
+    bottom: -105px;
     transform: translateY(-50px);
+    cursor: pointer;
 }
-#main-banner .arrow-down-scroll svg {
-    display: block;
+#main-banner .arrow-down-scroll .mouse_scroll {
+	display: block;
+	margin: 0 auto;
+	width: 24px;
+	height: 100px;
+}
+#main-banner .arrow-down-scroll .mouse_scroll .m_scroll_arrows {
+  display: block;
+  width: 5px;
+  height: 5px;
+  -ms-transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+  border-right: 2px solid #37C8AE;
+  border-bottom: 2px solid #37C8AE;
+  margin: 0 0 3px 4px;
+  width: 16px;
+  height: 16px;
+}
+#main-banner .arrow-down-scroll .mouse_scroll .unu {
+  margin-top: 1px;
+}
+#main-banner .arrow-down-scroll .mouse_scroll .unu, .doi, .trei {
+    -webkit-animation: mouse-scroll 1s infinite;
+    -moz-animation: mouse-scroll 1s infinite;
+    animation: mouse-scroll 1s infinite;
+}
+#main-banner .arrow-down-scroll .mouse_scroll .unu {
+  -webkit-animation-delay: .1s;
+  -moz-animation-delay: .1s;
+  -webkit-animation-direction: alternate;
+  animation-direction: alternate;
+  animation-delay: alternate;
+}
+#main-banner .arrow-down-scroll .mouse_scroll .doi {
+  -webkit-animation-delay: .2s;
+  -moz-animation-delay: .2s;
+  -webkit-animation-direction: alternate;
+  animation-delay: .2s;
+  animation-direction: alternate;
+  margin-top: -6px;
+}
+#main-banner .arrow-down-scroll .mouse_scroll .trei {
+  -webkit-animation-delay: .3s;
+  -moz-animation-delay: .3s;
+  -webkit-animation-direction: alternate;
+  animation-delay: .3s;
+  animation-direction: alternate; 
+  margin-top: -6px;
+}
+#main-banner .arrow-down-scroll .mouse_scroll .mouse {
+  height: 42px;
+  width: 24px;
+  border-radius: 14px;
+  transform: none;
+  border: 2px solid #37C8AE;
+  top: 170px;
+}
+#main-banner .arrow-down-scroll .mouse_scroll .wheel {
+  height: 5px;
+  width: 2px;
+  display: block;
+  margin: 5px auto;
+  background: #37C8AE;
+  position: relative; 
+  height: 4px;
+  width: 4px;
+  border: 2px solid #37C8AE;
+  -webkit-border-radius: 8px;
+  border-radius: 8px;
+}
+#main-banner .arrow-down-scroll .mouse_scroll .wheel {
+  -webkit-animation: mouse-wheel 0.6s linear infinite;
+  -moz-animation: mouse-wheel 0.6s linear infinite;
+  animation: mouse-wheel 0.6s linear infinite;
+}
+@-webkit-keyframes mouse-wheel{
+   0% {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+    -ms-transform: translateY(0);
+    transform: translateY(0);
+  }
+  100% {
+    opacity: 0;
+    -webkit-transform: translateY(6px);
+    -ms-transform: translateY(6px);
+    transform: translateY(6px);
+  }
+}
+@-moz-keyframes mouse-wheel {
+  0% { top: 1px; }
+  25% { top: 2px; }
+  50% { top: 3px;}
+  75% { top: 2px;}
+  100% { top: 1px;}
+}
+@-o-keyframes mouse-wheel {
+
+   0% { top: 1px; }
+  25% { top: 2px; }
+  50% { top: 3px;}
+  75% { top: 2px;}
+  100% { top: 1px;}
+}
+@keyframes mouse-wheel {
+
+   0% { top: 1px; }
+  25% { top: 2px; }
+  50% { top: 3px;}
+  75% { top: 2px;}
+  100% { top: 1px;}
+}
+@-webkit-keyframes mouse-scroll {
+
+  0%   { opacity: 0;}
+  50%  { opacity: .5;}
+  100% { opacity: 1;}
+}
+@-moz-keyframes mouse-scroll {
+
+  0%   { opacity: 0; }
+  50%  { opacity: .5; }
+  100% { opacity: 1; }
+}
+@-o-keyframes mouse-scroll {
+
+  0%   { opacity: 0; }
+  50%  { opacity: .5; }
+  100% { opacity: 1; }
+}
+@keyframes mouse-scroll {
+
+  0%   { opacity: 0; }
+  50%  { opacity: .5; }
+  100% { opacity: 1; }
 }
 #container {
     padding: 0 30px;
 }
 #title-and-text .title-wrap {
     text-align: center;
-    margin: 100px 0;
+    margin: 50px 0;
+    padding: 50px 0;
 }
 #title-and-text.service_section, .our_work_section {
     padding: 0px 0px;
