--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -27,7 +27,7 @@
                                     <div class="mega-text-wrap">
                                         <h4 class="megatext">Introduce your business to the future-ready sector of innovators and executors.</h4>
                                     </div>
-                                    <a href="" class="mega-btn">Let's Connect</a>
+                                    <a href="" class="cdk-btn-transparent">Let's Connect</a>
                                 </div>
                                 <div class="mega-side-right">
                                     <h2 class="mega-heading">services</h2>
