--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -106,7 +106,7 @@
             <div class="service_body_wrap">
                 <ul class="service-body desktop">
                     <li class="service-list">
-                        <a routerLink="/service-details" class="list-head">UX/UI Design</a>
+                        <a routerLink="/service-details" class="list-head result_hover">UX/UI Design</a>
                         <span class="list-text">Elevate user experiences with our expert UX/UI design service, seamlessly blending aesthetics and functionality for digital excellence.</span>
                     </li>
                     <li class="service-list">
@@ -261,8 +261,7 @@
                     </div>
                     <div class="work-image_four work-image_all">
                         <div class="card-h-txt">
-                            <!-- <img class="logo_card" src="../../assets/image/luxandnyx_logo-h.webp" width="100%" alt=""> -->
-                            <h3 class="logo_card">Igluu Meal Prep</h3>
+                            <img class="logo_card igluu" src="../../assets/image/attachment-igluu.png" width="100%" alt="">
                             <div class="bottom_card">
                             <h4 class="card-heading">Igluu Meal Prep</h4>
                             <p class="card-txt">Shopify Plus Design & Build</p>
