--- a/src/app/service/service.component.html
+++ b/src/app/service/service.component.html
@@ -29,7 +29,7 @@
             <div class="service_body_wrap">
                 <ul class="service-body desktop">
                     <li class="service-list">
-                        <a routerLink="/service-details" class="list-head">UX/UI Design</a>
+                        <a routerLink="/service-details" class="list-head result_hover">UX/UI Design</a>
                         <span class="list-text">Elevate user experiences with our expert UX/UI design service, seamlessly blending aesthetics and functionality for digital excellence.</span>
                     </li>
                     <li class="service-list">
