--- a/src/app/resource-13/resource-13.component.html
+++ b/src/app/resource-13/resource-13.component.html
@@ -165,7 +165,7 @@
                     <h5 class="blog-service-title">Recommended Reading</h5>
                 </div>
                 <div class="service-button">
-                    <a class="cdk-btn-transparent" href="javascript:void(0)">View All</a>
+                    <a class="cdk-btn-transparent" routerLink="/blog-list">View All</a>
                 </div>
             </div>
             <div class="blog_cards_wrapper flex" id="blogFilter">
